--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,6 +16,10 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
@@ -27,11 +31,6 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>org.acme</groupId>
-            <artifactId>build-tools</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.acme</groupId>
             <artifactId>shared</artifactId>
