--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,6 +16,10 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>io.smallrye</groupId>
+                <artifactId>jandex-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
             </plugin>
