--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>api</artifactId>
 
     <parent>
-        <groupId>org.acme</groupId>
+        <groupId>org.quarter</groupId>
         <artifactId>root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -54,12 +54,12 @@
             <artifactId>quarkus-rest</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.acme</groupId>
+            <groupId>org.quarter</groupId>
             <artifactId>shared</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.acme</groupId>
+            <groupId>org.quarter</groupId>
             <artifactId>client</artifactId>
         </dependency>
     </dependencies>
