--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-quarkus.arc.selected-alternatives=org.acme.client.hello.HelloClient
+quarkus.arc.selected-alternatives=org.quarter.client.hello.HelloClient
 #quarkus.log.level=DEBUG
 #quarkus.arc.log=DEBUG
