--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>build-tools</artifactId>
 
     <parent>
-        <groupId>org.acme</groupId>
+        <groupId>org.quarter</groupId>
         <artifactId>root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
