--- a/client/pom.xml
+++ b/client/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging> <!-- Specify that this module produces a JAR -->
 
     <parent>
-        <groupId>org.acme</groupId>
+        <groupId>org.quarter</groupId>
         <artifactId>root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -36,7 +36,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.acme</groupId>
+            <groupId>org.quarter</groupId>
             <artifactId>shared</artifactId>
         </dependency>
 
