--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.acme</groupId>
+    <groupId>org.quarter</groupId>
     <artifactId>root</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -75,7 +75,7 @@
 
                         <!-- Declare dependency on build-tools which contains the formatter.xml -->
                         <dependency>
-                            <groupId>org.acme</groupId>
+                            <groupId>org.quarter</groupId>
                             <artifactId>build-tools</artifactId>
                             <version>${project.version}</version>
                         </dependency>
@@ -164,13 +164,13 @@
             </dependency>
 
             <dependency>
-                <groupId>org.acme</groupId>
+                <groupId>org.quarter</groupId>
                 <artifactId>shared</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.acme</groupId>
+                <groupId>org.quarter</groupId>
                 <artifactId>client</artifactId>
                 <version>${project.version}</version>
             </dependency>
