--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -7,7 +7,7 @@
     <packaging>jar</packaging> <!-- Specify that this module produces a JAR -->
 
     <parent>
-        <groupId>org.acme</groupId>
+        <groupId>org.quarter</groupId>
         <artifactId>root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
